# meeting-transcriber

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-03-08-dual-coaching-ui.md
src/meeting_transcriber/: __init__.py  chunker.py  claude_cli.py  cli.py  coach.py  config.py  formats.py  models.py  opus_coach.py  prompter.py  recorder.py  server.py  summarizer.py  transcriber.py
src/meeting_transcriber/engines/: __init__.py  base.py  groq.py  openai_engine.py  qwen.py  qwen_realtime.py  registry.py  soniox.py
src/meeting_transcriber/static/: app.js  index.html  style.css
tests/: test_chunker.py  test_cli.py  test_coach.py  test_config.py  test_engine_groq.py  test_engine_qwen.py  test_engine_soniox.py  test_formats.py  test_opus_coach.py  test_post_meeting.py  test_prompter.py  test_qwen_realtime.py  test_recorder.py  test_server.py  test_stereo.py  test_streaming.py  test_summarizer.py  test_transcriber.py
