[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meeting-transcriber"
version = "0.1.0"
description = "Record, transcribe (Chinese+English), and summarize meetings from CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Yu Wen-Hao", email = "mail@yu-wenhao.com" }]
keywords = ["meeting", "transcription", "whisper", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
  "typer>=0.9",
  "openai>=1.0",
  "anthropic>=0.39",
  "sounddevice>=0.4",
  "soundfile>=0.12",
  "python-dotenv>=1.0",
  "platformdirs>=4.0",
  "rich>=13.0",
  "numpy>=1.26",
  "fastapi>=0.100",
  "uvicorn[standard]>=0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
mt = "meeting_transcriber.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_transcriber"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
